updated cpplint config file

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,4 +1,9 @@
 set noparent
 filter=-whitespace/tab
 filter=-legal
+filter=-build/header_guard
+filter=-whitespace/indent
+filter=-whitespace/line_length
+filter=-whitespace/comments
+filter=-build/include
 
